update css-classname to avoid overlap with one in vsm-box

--- a/src/vsm-autocomplete-large.css
+++ b/src/vsm-autocomplete-large.css
@@ -8,7 +8,7 @@ element that Vue is activated on (e.g. after '<div #app>...</div>') :
 
 */
 .vsm-autocomplete .input,
-.vsm-autocomplete .label {
+.vsm-autocomplete .placehold {
   font-size: 16px;
 }
 .vsm-autocomplete .list {
@@ -31,7 +31,7 @@ element that Vue is activated on (e.g. after '<div #app>...</div>') :
 .vsm-autocomplete .spinner.list-closed {
   margin-top: 7px;
 }
-.vsm-autocomplete .label.focus {
+.vsm-autocomplete .placehold.focus {
   left: 3px;
   font-size: 10.5px;
 }
